--- a/plugin.xml
+++ b/plugin.xml
@@ -51,4 +51,36 @@
     <source-file src="src/android/AliPayPlugin.java" target-dir="src/gusu/muzhe/plugin/alipay"/>
     <source-file src="src/android/PayResult.java" target-dir="src/gusu/muzhe/plugin/alipay"/>
   </platform>
+  
+  <platform name="ios">
+    <config-file target="config.xml" parent="/widget">
+      <feature name="AliPay">
+        <param name="ios-package" value="AlipayPlugin" />
+        <param name="onload" value="true" />
+      </feature>
+    </config-file>
+
+    <config-file target="*-Info.plist" parent="CFBundleURLTypes">
+      <array>
+          <dict>
+              <key>CFBundleURLName</key>
+              <string>alipay</string>
+              <key>CFBundleURLSchemes</key>
+              <array>
+                  <string>bcis</string>
+              </array>
+          </dict>
+      </array>
+    </config-file>
+
+    <framework src="CoreTelephony.framework" weak="true" />
+    <framework src="Security.framework" weak="true" />
+    <framework src="SystemConfiguration.framework" weak="true" />
+
+    <framework src="src/ios/lib/AlipaySDK.framework" custom="true" />
+
+    <header-file src="src/ios/AlipayPlugin.h"/>
+    <source-file src="src/ios/AlipayPlugin.m"/>
+
+  </platform>
 </plugin>
